<resources>
    <string name="title_location_permission">Uprawnienia lokalizacji</string>
    <string name="text_location_permission">Aplikacja do działania potrzebuje uprawnień gps, tak aby poprawnie mogła wspomagać Twój trening.</string>
    <string name="ok">Ok</string>

    <string name="app_name">GlobAR</string>
    <string name="azimuth_text">Azymut:</string>
    <string name="pitch_text">Pułap:</string>
    <string name="ble_not_supported">Bluetooth LE not suported</string>
    <string name="ar_navigation_title">Widok AR</string>
    <string name="ble_navigation_title">Skaner</string>
    <string name="list_navigation_title">Mapa urządzeń</string>
    <string name="ble_device_scanning_title">Dostępne urządzenia</string>
    <string name="scanning_button_name">Skanuj</string>
    <string name="saving_connecting_button_name">Zapisz i połącz się</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="deleteFromDbDialogTitle">Czy na pewno chcesz usunąć zapisane urządzenie?</string>
    <string name="permission_not_granted">Nie przyznano odpowiednich uprawnien</string>


    <string name="channel_name">Ardroid</string>
    <string name="channel_description">Ardroid</string>
    <string name="notification_title">Aplikacja dziala w tle</string>
    <string name="notification_text">Dotknij aby otworzyć aplikacje</string>


    <string name="markerListTextView">Lista znacznikow</string>
    <string name="seekBarStatusActive">Promien obszaru wynosi:</string>
    <string name="seekBarStatusNonactive">Wybierz miejsce na mapie</string>
    <string name="sample_text">Odczyt</string>
    <string name="time_sample_text">data</string>
    <string name="error_backend_connection">Brak połączenia z serwerem</string>
    <string name="main_ar_title">Lista dostępnych urządzeń</string>
    <string name="settings_navigation_title">Ustawienia</string>
    <string name="gmail_status_signed">Zaloguj sie przez konto Google</string>
    <string name="pref_category_account">Konto</string>
    <string name="pref_category_ar">Rozszerzona Rzeczywistość</string>
    <string name="settings">Ustawienia</string>
    <string name="register_error_not_valid_text">Błędne dane</string>
    <string name="register_error_user_exist">Nazwa użytkownika jest zajęta</string>
    <string name="login_error_invalid_pin">Błędny PIN</string>
    <string name="login_error_wrong_pin">PIN jest za krótki</string>
    <string name="login_error_user_not_exist">Nie ma takiego użytkownika</string>
    <string name="api_error">Błąd serwera</string>
    <string name="google_settings_account">Konto Google</string>
    <string name="running_without_login">Opcja dostępna dla zalogowanych użytkowników!</string>
    <string name="registration_summary_settings">Pamiętaj że tylko zalogowni użytkownicy mają dostęp do wszystkich funkcji aplikacji.</string>
    <string name="log_out">Wyloguj</string>
    <string name="save">Zapisz</string>

    <string name="fingerprintNotRecognized">Spróbuj ponownie</string>
    <string name="loginFingerprintText">Przyłóż palec aby sie zalogować</string>
    <string name="yes_text">Tak</string>
    <string name="no_text">Nie</string>
    <string name="fingerprint_summary_settings">Opcja ta pozwala na logowanie za pomocą odcisku palca.</string>
    <string name="pin_hint">PIN</string>
    <string name="name_hint">Nazwa użytkownika</string>
    <string name="password_hint">Hasło</string>
    <string name="double_click_text">Dotknij ponownie aby wyjść</string>
    <string name="auth_without_login">Wejdź bez logowania</string>
    <string name="finger_print_auth_permission">Czy chcesz logowac sie przy pomocy odcisku palca?</string>
    <string name="login">Zaloguj</string>
    <string name="register">Załóż konto</string>
    <string name="open_ar_view">Przejdź do widoku AR</string>
    <string name="save_iot_device_map">Zapisz wybrane urządzenia IoT</string>
    <string name="save_ratio">Zapamiętaj obszar</string>
    <string name="distance_iot">Dystans: </string>
    <string name="sample_iot">Odczyt: </string>
    <string name="iot_name">Nazwa:</string>
    <string name="device_disconnected">Brak połączenia z urządzniem!</string>
    <string name="relogin_user">Wybierz inne konto</string>
    <string name="or">lub</string>
    <string name="have_account">Mam już konto</string>
    <string name="map_circle_radius">Promień obszaru wynosi</string>
    <string name="pin_dialog_text">Wpisz kod PIN, którym będziesz się logował</string>


</resources>
