<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_auth_color">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:src="@drawable/logo_globar2_white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        style="@style/TextInputLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="324dp"
        android:textColorHint="#fff"
        android:theme="@style/MyButtonStyleWhite"
        android:paddingLeft="5dp"
        app:errorEnabled="true"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pin_hint"
            android:paddingLeft="5dp"
            android:inputType="numberPassword"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:theme="@style/MyButtonStyleWhite"
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="287dp"
        android:textColor="@color/blue_text"
        android:text="Zaloguj"
        app:cornerRadius="15dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="239dp"
        android:text="@string/or"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/reLoginLayout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="175dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/user_icon" />

        <TextView
            android:id="@+id/reloginButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/relogin_user"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/notLoginLayout"
        android:layout_width="250dp"
        android:layout_height="40dp"
              android:layout_below="@+id/reLoginLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-179dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/auth_without_log" />

        <TextView
            android:id="@+id/notLoginButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/auth_without_login"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>



</RelativeLayout>