<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanBleDeviceButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/bleDeviceItemListView"
        android:text="@string/scanning_button_name"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/bleDeviceItemListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanBleDeviceButton"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/scanningBleDeviceProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="134dp"
        android:layout_height="108dp"

        android:layout_marginStart="124dp"
        android:layout_marginTop="236dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectAndSaveBleDeviceButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/saving_connecting_button_name"
        app:cornerRadius="15dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/scanBleDeviceButton"
        android:layout_alignParentStart="true"
        android:padding="0dp"
        android:text="@string/ble_device_scanning_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@color/black" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="80dp"
        android:background="@color/black" />
</RelativeLayout>